feat: add e-mail on confirm
