# src/routes/rsvp.route.ts
@@ -6,5 +6,6 @@ const router = Router();
 // Attach controller methods to routes
 router.post('/', RsvpController.create);
 router.get('/', RsvpController.list);
+router.post('/lookup', RsvpController.lookup);
 
 export default router;
